# ChainView

./: .env.example  .gitignore  BENCH.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
benches/: bench_chain_merge.rs  bench_event_fanin.rs  bench_render_chain.rs  bench_replay_decode.rs
docs/: ROADMAP.md
fuzz/: Cargo.toml  README.md  gen_corpus.sh
fuzz/fuzz_targets/: fuzz_provider_normalize.rs  fuzz_replay_decode.rs
proptest-regressions/providers/: deribit.txt
proptest-regressions/replay/: validate.txt
scripts/: changelog-section.sh  check-changelog.sh  check-perf.sh  surface-diff.sh
src/: app.rs  bench_support.rs  config.rs  error.rs  event.rs  fuzz_support.rs  lib.rs  main.rs  terminal.rs  tests_capability_matrix.rs  tests_integration.rs  tests_replay_integration.rs
src/app/: bridge.rs  keymap.rs  payoff_build.rs  registry.rs  replay_load.rs  replay_payoff_build.rs  replay_view.rs  supervisor.rs  surface_build.rs
src/chain/: depth.rs  events.rs  fetch.rs  greeks.rs  identity.rs  mod.rs  store.rs
src/providers/: alpaca.rs  deribit.rs  dxfeed_decode.rs  dxlink.rs  ibkr.rs  ig.rs  mod.rs  tastytrade.rs
src/replay/: mod.rs  tables.rs  timeline.rs  validate.rs
src/ui/: chain.rs  depth.rs  driver.rs  golden.rs  graph.rs  mod.rs  payoff.rs  replay.rs  surface.rs  theme.rs  view.rs
tests/: arch.rs  integration.rs  live_smoke.rs  property.rs  replay_bundle_fixtures.rs  supervisor_shutdown.rs  terminal_restore.rs  trybuild.rs
tests/common/: bundle_gen.rs  sha256.rs
tests/fixtures/alpaca/: option_contracts_spy_page1.json  option_contracts_spy_page2.json  option_snapshots_spy.json
tests/fixtures/bundle/bad_schema/: fills.parquet  manifest.json
tests/fixtures/bundle/dangling_position_id/: fills.parquet  positions.parquet
tests/fixtures/bundle/decompression_bomb/: equity_curve.parquet  fills.parquet  greeks_attribution.parquet  manifest.json
tests/fixtures/bundle/ironcondor_conformance/: README.md  equity_curve.parquet  fills.parquet  greeks_attribution.parquet  manifest.json  positions.parquet
tests/fixtures/bundle/malformed_arrow_schema/: greeks_attribution.parquet  manifest.json
tests/fixtures/bundle/missing_table/: manifest.json
tests/fixtures/bundle/oversized_footer/: equity_curve.parquet  fills.parquet  greeks_attribution.parquet  manifest.json  positions.parquet
tests/fixtures/bundle/rowcount_lie/: manifest.json
tests/fixtures/bundle/truncated/: fills.parquet
tests/fixtures/bundle/valid/: SHA256SUMS
tests/fixtures/deribit/: README.md
tests/fixtures/deribit/book/: book_delta.json  book_grouped_snapshot.json  book_snapshot.json
tests/fixtures/deribit/instruments/: instruments_btc.json  instruments_missing_strike.json
tests/fixtures/deribit/ticker/: ticker_61000_call.json  ticker_crossed.json  ticker_negative.json  ticker_non_finite.json  ticker_normal.json  ticker_put.json  ticker_zero_bid.json
tests/fixtures/dxlink/: README.md
tests/fixtures/dxlink/greeks/: greeks_symbol.json
tests/fixtures/dxlink/overlay/: overlay_matching.json  overlay_mismatched.json
tests/fixtures/dxlink/quote/: quote_symbol.json
tests/fixtures/ibkr/: sec_def_opt_params_spx.json
tests/fixtures/ig/: README.md  market_navigation_spx.json
tests/fixtures/ig/depth/: option_epic_price_snapshot.json
tests/fixtures/tastytrade/: nested_option_chain_spy.json
tests/render/golden/: README.md
tests/render/golden/chain/: deribit_btc_atm.txt  deribit_btc_atm_no_color.txt  empty.txt  escape_hygiene.txt  loading.txt  provider_error.txt  stale.txt
tests/render/golden/common/: too_small.txt
tests/render/golden/depth/: depth_unavailable.txt  deribit_btc_ladder.txt
tests/render/golden/payoff/: iron_condor_expiration.txt  iron_condor_t0.txt  payoff_empty.txt  payoff_invalid.txt
tests/render/golden/replay/: empty.txt  equity_curve.txt  error.txt  greek_attribution.txt  loading.txt  payoff_error.txt  payoff_head.txt  trade_drilldown.txt
tests/render/golden/surface/: deribit_btc_curve.txt  deribit_btc_smile.txt  deribit_btc_smile_stale.txt  deribit_btc_surface.txt  deribit_btc_surface_stale.txt  surface_empty.txt
tests/ui/fail/: exhaustive_match_auth.rs  exhaustive_match_auth.stderr  exhaustive_match_chain.rs  exhaustive_match_chain.stderr  exhaustive_match_chain_poll.rs  exhaustive_match_chain_poll.stderr  exhaustive_match_greeks.rs  exhaustive_match_greeks.stderr  exhaustive_match_option_stream.rs  exhaustive_match_option_stream.stderr  struct_literal_capabilities.rs  struct_literal_capabilities.stderr
tests/ui/pass/: builder_default.rs  builder_full.rs  enum_variant_construct.rs  minor_bump_forward_compat.rs
