[package]
name = "chainview"
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Terminal UI for option chains, Greeks and volatility - real-time market data and backtest replay in your terminal."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/ChainView"
homepage = "https://github.com/joaquinbejar/ChainView"
keywords = ["finance", "options", "tui", "terminal", "trading"]
categories = ["finance", "command-line-utilities"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[features]
# `bench` gates the bench-only support surface (`src/bench_support.rs` plus the
# `#[cfg(feature = "bench")]` constructors reached by `benches/*`). It is OFF by
# default and OUT of the semver-governed public API: a normal `cargo build`
# (no `--features bench`) exposes the exact same public surface it did before ŌĆö
# nothing under this feature appears without it (issue #21). The three
# `[[bench]]` targets set `required-features = ["bench"]`, so `cargo bench`
# without the feature simply skips them.
bench = []

[lib]
name = "chainview"
path = "src/lib.rs"

[[bin]]
name = "chainview"
path = "src/main.rs"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "1"
humantime = "2"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
optionstratlib = { version = "0.18.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std"] }
async-trait = "0.1"
# `rt`/`macros`/`time` join the existing `sync` for the task supervisor (issue
# #11): `rt` for `JoinHandle`/`abort`/`JoinError::is_panic` (and the Deribit
# adapter's bounded `JoinSet` ticker hydration, #15), `macros` for the
# `tokio::select!` in the supervise loop, `time` for the 2 s bounded-join
# `tokio::time::timeout`. The `net`/`fs`/`rt-multi-thread` features are not
# requested here, but `deribit-http` (#15) feature-unifies `tokio` toward `full`
# transitively; the render loop (#13) still picks the runtime flavor.
tokio = { version = "1", default-features = false, features = [
    "sync",
    "rt",
    "macros",
    "time",
] }
# The cancellation-token tree owned by the supervisor (issue #11): the root
# `CancellationToken` + one `child_token` per task. `default-features = false`
# keeps only `tokio_util::sync::CancellationToken` (no codec/io); RUSTSEC-clean,
# MSRV 1.71 (below our 1.85). Explicit-approval addition (CLAUDE.md "Coding
# Rules") ŌĆö audit note in CHANGELOG.
tokio-util = { version = "0.7", default-features = false }
# The terminal stack (ADR-0001, issue #8, first TUI pull). ratatui 0.30 requires
# rustc 1.88, above our 1.85 MSRV, so the resolver pins 0.29 ŌĆö which re-exports
# crossterm 0.28.1. `crossterm` is pinned to that same `0.28` line so cargo
# unifies to a single instance: the crossterm ChainView calls is exactly the one
# ratatui drives (no two-version mismatch).
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
# The Deribit REST client (issue #15, the zero-config poll leg ŌĆö ADR-0003). Wraps
# the venue's JSON-RPC-over-HTTP; ChainView never reimplements the protocol
# (CLAUDE.md "Key Decisions"). Explicit-approval addition (CLAUDE.md "Coding
# Rules") ŌĆö audit note in CHANGELOG. Public data needs NO credentials: the
# adapter drives `HttpConfig::production()` and never requires or logs a
# credential; the public endpoints send none.
# Supply-chain: pulls `reqwest` (+ its default TLS), `tokio` (feature-unified to
# `full`), `serde_json`, `hmac`/`sha2`/`base64` (request signing, unused on the
# public path), `url`, `serde_with`, `rand`, and `dotenv`. `deribit-websocket`
# (streaming) is a SEPARATE addition deferred to #16. No rustls crypto-provider
# install is needed here ŌĆö the HTTP client relies on `reqwest`'s default TLS and
# exposes no `install_default_crypto_provider`; any provider install belongs to
# the websocket path (#16), and no live TLS handshake runs in the test suite.
deribit-http = "0.7.1"
# The Deribit WebSocket client (issue #16, the streaming overlay + reconnect
# loop). Wraps the venue's JSON-RPC 2.0 over WebSocket; ChainView never
# reimplements the protocol (CLAUDE.md "Key Decisions"). Explicit-approval
# addition (CLAUDE.md "Coding Rules") ŌĆö audit note in CHANGELOG. Public market
# data needs NO credentials: the adapter drives the production URL and never
# authenticates, so no credential is required or logged.
# Supply-chain delta over #15's `deribit-http`: adds `tokio-tungstenite` (WS
# framing) and the default `rustls-aws-lc` TLS backend ŌĆö `rustls` + the
# `aws-lc-rs` crypto provider ŌĆö installed ONCE via
# `install_default_crypto_provider()` before the first WS TLS handshake (this is
# what differs from #15, where the REST client used `reqwest`'s default TLS and
# needed no provider install), plus `futures-util`. It shares `tokio`
# (feature-unified toward `full`), `serde`/`serde_json`, `url`, and `dotenv`
# with the existing tree. `aws-lc-rs` requires a C/ASM toolchain at build time.
deribit-websocket = "0.3.1"

[dev-dependencies]
proptest = "1"
# The bench harness (issue #21, `benches/*`, `docs/06-performance.md` ┬¦4,
# `docs/TESTING.md` ┬¦11). DEV-ONLY ŌĆö neither crate rides in the release binary,
# and both are used exclusively by the `required-features = ["bench"]` targets.
# `criterion` is the timing harness; `default-features = false` drops the
# `plotters`/`rayon`/html-report tree we do not use, keeping only
# `cargo_bench_support` (the `--bench` CLI + summary). `hdrhistogram` records the
# p50/p99/p99.9 tail that headlines `BENCH.md` (a frame budget is a tail metric,
# so criterion's mean is context only). Explicit-approval addition (CLAUDE.md
# "Coding Rules") ŌĆö supply-chain audit note in CHANGELOG. MSRV: both are well
# under the crate's 1.88 floor.
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
] }
hdrhistogram = "7"
# `test-util` enables the controllable virtual clock (`#[tokio::test(start_paused
# = true)]`, `tokio::time::pause`/`advance`) so the supervisor's 2 s
# bounded-join-then-abort is asserted with ZERO real wall-clock wait (issue #11).
# Dev-only, so it never rides in the release binary; the runtime/macros/time
# features it needs are already in the main `tokio` dependency.
tokio = { version = "1", default-features = false, features = ["test-util"] }

# The panic-injection restore harness is a bare subprocess (no libtest capture),
# so the child panics on a normal process with the default hook as the chained
# tail ŌĆö see `tests/terminal_restore.rs` and `docs/TESTING.md` ┬¦7.
[[test]]
name = "terminal_restore"
harness = false

[lints.rust]
warnings = { level = "deny", priority = -1 }
unsafe_code = "deny"
missing_docs = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# The three v0.1 hot-path benches (issue #21). Each is a `harness = false`
# binary (its own `main` drives criterion + the hdrhistogram tail report) and is
# gated behind the `bench` feature, so it compiles only under
# `cargo bench --features bench` and never touches the default build.
[[bench]]
name = "bench_render_chain"
harness = false
required-features = ["bench"]

[[bench]]
name = "bench_event_fanin"
harness = false
required-features = ["bench"]

[[bench]]
name = "bench_chain_merge"
harness = false
required-features = ["bench"]

[profile.release]
lto = true
codegen-units = 1
