[package]
name = "chainview"
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Terminal UI for option chains, Greeks and volatility - real-time market data and backtest replay in your terminal."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/ChainView"
homepage = "https://github.com/joaquinbejar/ChainView"
keywords = ["finance", "options", "tui", "terminal", "trading"]
categories = ["finance", "command-line-utilities"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

# `cargo binstall` packaging (issue #58, docs/RELEASE-PROCESS.md). These keys let
# `cargo binstall chainview` resolve the prebuilt binary attached to the GitHub
# Release instead of a source build. They describe EXACTLY the artifacts
# `.github/workflows/release.yml` produces at a `v*` tag cut: one gzip tarball per
# target named `chainview-<target>.tar.gz`, with the `chainview` binary at the
# archive root. No new runtime dependency — this is metadata only, ignored by
# `cargo build`.
#
# Template tokens resolved by binstall: `{ repo }` = the `repository` field above;
# `{ name }`/`{ bin }` = `chainview`; `{ version }` = the tag's version;
# `{ target }` = the Rust target triple; `{ archive-suffix }` = `.tar.gz` (from
# `pkg-fmt = "tgz"`); `{ binary-ext }` = empty on the four unix targets shipped.
# Example resolved asset:
#   https://github.com/joaquinbejar/ChainView/releases/download/v1.0.0/chainview-aarch64-apple-darwin.tar.gz
#
# HONESTY (issue #58): the crate on crates.io is still the `v0.0.1`
# name-reservation placeholder, so `cargo binstall chainview` cannot be run
# end-to-end until the first real publish. This block is validated for
# WELL-FORMEDNESS — it parses through `cargo metadata` and the tokens match the
# release-workflow naming per the binstall spec — NOT by an end-to-end install of
# an unpublished crate. The end-to-end `cargo binstall` verification is a
# release-cut step run post-publish (docs/RELEASE-PROCESS.md §12).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[features]
# `bench` gates the bench-only support surface (`src/bench_support.rs` plus the
# `#[cfg(feature = "bench")]` constructors reached by `benches/*`). It is OFF by
# default and OUT of the semver-governed public API: a normal `cargo build`
# (no `--features bench`) exposes the exact same public surface it did before —
# nothing under this feature appears without it (issue #21). The three
# `[[bench]]` targets set `required-features = ["bench"]`, so `cargo bench`
# without the feature simply skips them.
bench = []
# `tastytrade` gates the whole tastytrade adapter (`src/providers/tastytrade.rs`,
# issue #40). It is DISABLED by default and stays off the shippable set: the
# published tastytrade 0.3.0 (the checksum-pinned artifact ChainView resolves) logs
# the session token, the DXLink token, and the raw quote-token body at DEBUG — a
# credential-guarantee violation (docs/SECURITY.md §2.1). The provider is
# therefore excluded from `with_builtins()` and reachable only via the explicit
# `with_gated_builtin(id)` opt-in, which fails with a typed startup error while
# the gate holds — so a stock binary can NEVER execute the upstream's logging
# (docs/SECURITY.md §2/§3). A normal `cargo build` (no `--features tastytrade`)
# does not compile the adapter or pull the `tastytrade` crate at all. `dep:` keeps
# the optional crate from implicitly defining a same-named feature.
tastytrade = ["dep:tastytrade"]
# `alpaca` gates the whole Alpaca adapter (`src/providers/alpaca.rs`, issue #41).
# It is DISABLED by default and stays off the shippable set: like tastytrade, the
# adapter is excluded from `with_builtins()` and reachable only via the explicit
# `with_gated_builtin(id)` opt-in, which fails with a typed startup error while the
# gate holds (docs/SECURITY.md §2.4). A normal `cargo build` (no `--features
# alpaca`) does not compile the adapter or pull the `alpaca-http` /
# `alpaca-websocket` crates at all. `dep:` keeps the optional crates from
# implicitly defining same-named features.
alpaca = ["dep:alpaca-http", "dep:alpaca-websocket", "dep:futures-util"]
# `fuzz` gates the fuzz-only harness surface (`src/fuzz_support.rs` plus the
# `#[cfg(feature = "fuzz")]` `pub(crate)` Deribit normalize entry points reached
# by the separate `fuzz/` cargo-fuzz crate, issue #53). It is OFF by default and
# OUT of the semver-governed public API: a normal `cargo build` (no `--features
# fuzz`) exposes the exact same public surface it did before and never compiles
# the harness — nothing under this feature appears without it. It adds NO
# dependency to the main tree (`fuzz = []`); the cargo-fuzz/libfuzzer-sys deps
# live only in `fuzz/Cargo.toml`, a separate crate excluded from the default
# workspace build (docs/TESTING.md §13.4, docs/SECURITY.md §7).
fuzz = []
# `dxlink` gates the whole standalone DXLink overlay adapter
# (`src/providers/dxlink.rs`, issue #42). It is DISABLED by default and stays off
# the shippable set: like tastytrade and Alpaca, the adapter is excluded from
# `with_builtins()` and reachable only via the explicit `with_gated_builtin(id)`
# opt-in, which fails with a typed startup error while the gate holds
# (docs/SECURITY.md §2.4). A normal `cargo build` (no `--features dxlink`) does
# not compile the adapter or pull the `dxlink` crate at all. `dep:` keeps the
# optional crate from implicitly defining a same-named feature.
dxlink = ["dep:dxlink"]

[lib]
name = "chainview"
path = "src/lib.rs"

[[bin]]
name = "chainview"
path = "src/main.rs"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
# The opaque manifest blobs in the replay result-bundle contract
# (`config`/`strategy`/`data_source`/`metrics` are `serde_json::Value`, issue #29,
# `docs/04-replay-mode.md` §2.1). Explicit-approval addition (CLAUDE.md "Coding
# Rules"). Supply-chain: NO new surface — `serde_json` is already in the
# transitive tree via `deribit-http`/`deribit-websocket`, so this only promotes an
# existing crate to a direct dependency; audit note in CHANGELOG (ADR-0007).
serde_json = "1"
toml = "1"
humantime = "2"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
optionstratlib = { version = "0.18.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std"] }
async-trait = "0.1"
# `rt`/`macros`/`time` join the existing `sync` for the task supervisor (issue
# #11): `rt` for `JoinHandle`/`abort`/`JoinError::is_panic` (and the Deribit
# adapter's bounded `JoinSet` ticker hydration, #15), `macros` for the
# `tokio::select!` in the supervise loop, `time` for the 2 s bounded-join
# `tokio::time::timeout`. The `net`/`fs`/`rt-multi-thread` features are not
# requested here, but `deribit-http` (#15) feature-unifies `tokio` toward `full`
# transitively; the render loop (#13) still picks the runtime flavor.
tokio = { version = "1", default-features = false, features = [
    "sync",
    "rt",
    "macros",
    "time",
] }
# The cancellation-token tree owned by the supervisor (issue #11): the root
# `CancellationToken` + one `child_token` per task. `default-features = false`
# keeps only `tokio_util::sync::CancellationToken` (no codec/io); RUSTSEC-clean,
# MSRV 1.71 (below our 1.88). Explicit-approval addition (CLAUDE.md "Coding
# Rules") — audit note in CHANGELOG.
tokio-util = { version = "0.7", default-features = false }
# The terminal stack (ADR-0001, issue #8, first TUI pull). ratatui 0.29 is
# retained; 0.30 (which needs rustc 1.88 — now our MSRV, issue #20) is a
# deferred breaking migration that also clears the lru RUSTSEC-2026-0002
# advisory (see deny.toml). 0.29 re-exports crossterm 0.28.1, and `crossterm`
# is pinned to that same `0.28` line so cargo unifies to a single instance:
# the crossterm ChainView calls is exactly the one
# ratatui drives (no two-version mismatch).
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
# The Deribit REST client (issue #15, the zero-config poll leg — ADR-0003). Wraps
# the venue's JSON-RPC-over-HTTP; ChainView never reimplements the protocol
# (CLAUDE.md "Key Decisions"). Explicit-approval addition (CLAUDE.md "Coding
# Rules") — audit note in CHANGELOG. Public data needs NO credentials: the
# adapter drives `HttpConfig::production()` and never requires or logs a
# credential; the public endpoints send none.
# Supply-chain: pulls `reqwest` (+ its default TLS), `tokio` (feature-unified to
# `full`), `serde_json`, `hmac`/`sha2`/`base64` (request signing, unused on the
# public path), `url`, `serde_with`, `rand`, and `dotenv`. `deribit-websocket`
# (streaming) is a SEPARATE addition deferred to #16. No rustls crypto-provider
# install is needed here — the HTTP client relies on `reqwest`'s default TLS and
# exposes no `install_default_crypto_provider`; any provider install belongs to
# the websocket path (#16), and no live TLS handshake runs in the test suite.
deribit-http = "0.7.1"
# The Deribit WebSocket client (issue #16, the streaming overlay + reconnect
# loop). Wraps the venue's JSON-RPC 2.0 over WebSocket; ChainView never
# reimplements the protocol (CLAUDE.md "Key Decisions"). Explicit-approval
# addition (CLAUDE.md "Coding Rules") — audit note in CHANGELOG. Public market
# data needs NO credentials: the adapter drives the production URL and never
# authenticates, so no credential is required or logged.
# Supply-chain delta over #15's `deribit-http`: adds `tokio-tungstenite` (WS
# framing) and the default `rustls-aws-lc` TLS backend — `rustls` + the
# `aws-lc-rs` crypto provider — installed ONCE via
# `install_default_crypto_provider()` before the first WS TLS handshake (this is
# what differs from #15, where the REST client used `reqwest`'s default TLS and
# needed no provider install), plus `futures-util`. It shares `tokio`
# (feature-unified toward `full`), `serde`/`serde_json`, `url`, and `dotenv`
# with the existing tree. `aws-lc-rs` requires a C/ASM toolchain at build time.
deribit-websocket = "0.3.1"
# The tastytrade client (issue #40, the poll->stream merge provider —
# `docs/03-data-providers.md` §7.2). OPTIONAL and behind the DISABLED-by-default
# `tastytrade` feature: a normal build never pulls it, and it is reachable only
# via `with_gated_builtin` (which fails while the credential-logging gate holds,
# docs/SECURITY.md §2). Wraps tastytrade's REST option-chain + its bundled dxfeed
# streaming binding; ChainView never reimplements the protocol (CLAUDE.md "Key
# Decisions"). Explicit-approval addition (CLAUDE.md "Coding Rules") — ADR-0007
# audit note in CHANGELOG (`cargo audit` + `cargo deny check` (deny.toml pins `all-features = true`)).
# Auth is injected programmatically: `TastyTradeConfig` has all-public fields, so
# the adapter builds it from ChainView-namespaced `CHAINVIEW_TASTYTRADE_*` env
# vars and calls `TastyTrade::login(&config)` WITHOUT the crate's `from_env()`
# (which would read the foreign `TASTYTRADE_*` namespace, load a dotenv file, and
# install a tracing subscriber) — verified against the 0.3.0 checkout.
# Supply-chain delta (feature-on only): pulls `tokio-tungstenite` (native-tls
# backend), `dxlink`, `reqwest`, `erased-serde`, `flume`, `derive_builder`,
# `pretty-simple-display`, and (transitively) `dotenv`/`tracing-subscriber` — the
# latter two are never exercised because the adapter never calls `from_env`.
tastytrade = { version = "0.3", optional = true }
# The Alpaca REST + WebSocket clients (issue #41, the composed poll->stream
# provider — `docs/03-data-providers.md` §7.5). OPTIONAL and behind the
# DISABLED-by-default `alpaca` feature: a normal build never pulls them, and the
# adapter is reachable only via `with_gated_builtin` (which fails while the gate
# holds, docs/SECURITY.md §2.4). `alpaca-http` wraps the venue REST (option
# contracts + snapshots); `alpaca-websocket` wraps the underlying Trade/Quote/Bar
# stream — ChainView never reimplements a protocol (CLAUDE.md "Key Decisions").
# Explicit-approval addition (CLAUDE.md "Coding Rules") — ADR-0007 audit note in
# CHANGELOG (`cargo audit` + `cargo deny check` (deny.toml pins `all-features = true`)).
# Auth is injected programmatically: both clients construct from
# `alpaca_base::Credentials::new(key, secret)` + `Environment::{Paper,Live}`, so
# the adapter builds them from ChainView-namespaced `CHAINVIEW_ALPACA_*` env vars
# and NEVER calls the crates' `from_env()` (which would read the foreign
# `ALPACA_*` namespace and load a `.env` via `dotenv`). No global tracing
# subscriber is installed on construction (`init_logger` is opt-in and untouched)
# — verified against the 0.21.2 / 0.6.0 checkout.
# Supply-chain delta (feature-on only): pulls `reqwest` (+ default TLS),
# `tokio-tungstenite` (rustls-tls-webpki-roots), `rustls` (ring provider,
# installed once by the crate's own `init_crypto_provider`), `futures-util`,
# `url`, `serde_urlencoded`, `urlencoding`, `uuid`, and (transitively, never
# exercised) `dotenv` + `tracing-subscriber`.
alpaca-http = { version = "0.21.2", optional = true }
alpaca-websocket = { version = "0.6.0", optional = true }
# The Alpaca `MarketDataStream` is consumed through the `futures_core::Stream`
# trait it implements, so `StreamExt::next` is needed to drain it into the bounded
# bridge (issue #41). OPTIONAL, behind the `alpaca` feature only. It already rides
# the `alpaca-websocket` tree, so a feature-on build pulls no crate that was not
# already present; `default-features = false` keeps only the async/stream adapters.
# Explicit-approval addition (CLAUDE.md "Coding Rules") — audit note in CHANGELOG.
futures-util = { version = "0.3", default-features = false, optional = true }
# The standalone DXLink client (issue #42, the overlay-only quote/Greeks provider
# — `docs/03-data-providers.md` §7.3). OPTIONAL and behind the DISABLED-by-default
# `dxlink` feature: a normal build never pulls it, and the adapter is reachable
# only via `with_gated_builtin` (which fails while the gate holds,
# docs/SECURITY.md §2.4). Wraps the DXLink WebSocket protocol
# (`DXLinkClient::new(url, token)`, no REST); ChainView never reimplements the
# protocol (CLAUDE.md "Key Decisions"). Explicit-approval addition (CLAUDE.md
# "Coding Rules") — ADR-0007 audit note in CHANGELOG (`cargo audit` +
# `cargo deny check` (deny.toml pins `all-features = true`)).
# Auth is injected programmatically: `DXLinkClient::new(url, token)` takes the URL
# and token as plain arguments, so the adapter builds them from ChainView-
# namespaced `CHAINVIEW_DXLINK_*` env vars. There is NO dotenv load, NO foreign
# env namespace, and NO global tracing subscriber installed on construction; the
# 0.2.0 client redacts the serialized `AuthMessage` token in its `debug!`
# (`redact_sensitive`) and its `Debug` shows only `has_token` — verified against
# the 0.2.0 checkout.
# Supply-chain delta (feature-on only): pulls `tokio-tungstenite` (native-tls)
# and `futures-util`, both already in the tree under the gated
# tastytrade/deribit-websocket features. Under `--all-features` `dxlink` resolves
# at both 0.2.0 (this direct dep) and 0.1.5 (transitive via the gated tastytrade
# 0.3.0), a deny.toml `multiple-versions = "warn"` duplicate, never a failure.
dxlink = { version = "0.2", optional = true }
# The Parquet reader for the IronCondor result bundle (issue #30, ADR-0010,
# `docs/04-replay-mode.md` §2/§3). The bundle's four tables are Parquet; the
# reader decodes them batch-by-batch under measured resource ceilings. ChainView
# never reimplements the columnar format — a hand-rolled reader would violate the
# no-reimplement rule (CLAUDE.md), and `arrow2` is unmaintained, so `parquet` (the
# arrow-rs crate) is the choice. Explicit-approval addition (CLAUDE.md "Coding
# Rules") — audit note in CHANGELOG + ADR-0010. MSRV: parquet 59 is 1.85, under
# our 1.88 floor (verified with `cargo +1.88 check`).
# Feature trim: `default-features = false` drops the `async` reader, `object_store`,
# and the unused codecs; only `arrow` (the `RecordBatchReader` the ceiling decode
# iterates) plus the three common compression codecs — `snap`, `zstd`, `lz4` —
# are enabled. The bundle contract (`docs/04` §2) does not yet name a codec, so the
# trio is enabled as a contract clarification to settle with IronCondor (ADR-0010).
# The decode is synchronous, batched, and cancellation-polled on a blocking worker
# — NO `async` feature, so `tokio` is not pulled into the domain reader.
parquet = { version = "59", default-features = false, features = [
    "arrow",
    "snap",
    "zstd",
    "lz4",
] }
# The Arrow in-memory array types the typed table decoders read (issue #31,
# `src/replay/tables.rs`, `docs/04-replay-mode.md` §2.2/§5). The #30 reader hands
# each table's `RecordBatch` to the #31 decoders, which look up the documented
# columns by name and downcast them to their concrete Arrow arrays
# (`Int32Array`/`Int64Array`/`Float64Array`/`BooleanArray`/`StringArray`, plus
# `DictionaryArray<Int32,Utf8>` handled defensively), then narrow each signed wire
# integer into the typed row via checked `try_from` — never an `as` cast.
# Promoted from a #30 DEV-dependency to a direct dependency: NO new crate enters
# the graph — `arrow-array` is already compiled in the tree as `parquet`'s own
# transitive dependency and was already a dev-dependency, so this only names it for
# the production decode path (the same "no new surface" promotion pattern as #29's
# `serde_json`; supply-chain audit note in CHANGELOG, ADR-0010). `arrow-schema`
# (schema/`DataType` construction) is needed only by the `#[cfg(test)]` batch
# writers, so it stays a dev-dependency. Version pinned to `parquet` 59's arrow
# epoch.
arrow-array = "59"

[dev-dependencies]
proptest = "1"
# The bench harness (issue #21, `benches/*`, `docs/06-performance.md` §4,
# `docs/TESTING.md` §11). DEV-ONLY — neither crate rides in the release binary,
# and both are used exclusively by the `required-features = ["bench"]` targets.
# `criterion` is the timing harness; `default-features = false` drops the
# `plotters`/`rayon`/html-report tree we do not use, keeping only
# `cargo_bench_support` (the `--bench` CLI + summary). `hdrhistogram` records the
# p50/p99/p99.9 tail that headlines `BENCH.md` (a frame budget is a tail metric,
# so criterion's mean is context only). Explicit-approval addition (CLAUDE.md
# "Coding Rules") — supply-chain audit note in CHANGELOG. MSRV: both are well
# under the crate's 1.88 floor.
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
] }
hdrhistogram = "7"
# `test-util` enables the controllable virtual clock (`#[tokio::test(start_paused
# = true)]`, `tokio::time::pause`/`advance`) so the supervisor's 2 s
# bounded-join-then-abort is asserted with ZERO real wall-clock wait (issue #11).
# Dev-only, so it never rides in the release binary; the runtime/macros/time
# features it needs are already in the main `tokio` dependency.
tokio = { version = "1", default-features = false, features = ["test-util"] }
# The Parquet test-writer support (issues #30/#31). DEV-ONLY — none rides in the
# release binary. `arrow-schema` (matched to `parquet` 59's arrow epoch) builds the
# `Schema`/`Field`/`DataType` values the `#[cfg(test)]` writers use to serialise
# tiny real Parquet fixtures for the ceiling round-trips and the typed-decode
# tests; it is already compiled in the tree as `parquet`'s own transitive dep, so
# this only names it for the tests. `arrow-array` moved to `[dependencies]` at #31
# because the production decoders read its array types. `tempfile` gives each test
# an auto-cleaned bundle directory (RAII `TempDir`), so no test leaves artifacts
# behind. All RUSTSEC-clean, well under the 1.88 floor.
arrow-schema = "59"
tempfile = "3"
# The compile-fixture harness for the `capabilities_source_compat` source-compat
# gate (issue #44, `docs/TESTING.md` §3, `docs/SEMVER.md` provider-port
# versioning). DEV-ONLY — it never rides in the release binary; it compiles the
# `tests/ui/*` fixtures as separate crates against the built `chainview` lib
# (the exact external-adapter story) and asserts a downstream struct literal for
# a `#[non_exhaustive]` capability type is rejected while the builder path
# compiles. Explicit-approval addition (CLAUDE.md "Coding Rules") — supply-chain
# audit note in CHANGELOG (`cargo audit` + `cargo deny check`). All-permissive
# tree (`glob`/`termcolor`/`dissimilar`/`serde`/`serde_json`/`toml`, the last
# three already in the graph); MIT/Apache-2.0, well under the 1.88 floor and
# RUSTSEC-clean. The gate is EXECUTED only on the pinned 1.88 CI job (committed
# `.stderr` is rustc-version-sensitive); it self-skips on any other toolchain.
trybuild = "1.0"

# The panic-injection restore harness is a bare subprocess (no libtest capture),
# so the child panics on a normal process with the default hook as the chained
# tail — see `tests/terminal_restore.rs` and `docs/TESTING.md` §7.
[[test]]
name = "terminal_restore"
harness = false

[lints.rust]
warnings = { level = "deny", priority = -1 }
unsafe_code = "deny"
missing_docs = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# The three v0.1 hot-path benches (issue #21). Each is a `harness = false`
# binary (its own `main` drives criterion + the hdrhistogram tail report) and is
# gated behind the `bench` feature, so it compiles only under
# `cargo bench --features bench` and never touches the default build.
[[bench]]
name = "bench_render_chain"
harness = false
required-features = ["bench"]

[[bench]]
name = "bench_event_fanin"
harness = false
required-features = ["bench"]

[[bench]]
name = "bench_chain_merge"
harness = false
required-features = ["bench"]

# HP-4 — the replay table decode (issue #36). Like the other three it is a
# `harness = false` binary (its own `main` drives criterion + the hdrhistogram
# tail report) gated behind the `bench` feature, so it compiles only under
# `cargo bench --features bench` and never touches the default build. It benches
# the PUBLIC `BundleReader` open+load path (no `bench_support` needed) over a
# conformance bundle generated by the shared `tests/common/bundle_gen.rs`.
[[bench]]
name = "bench_replay_decode"
harness = false
required-features = ["bench"]

[profile.release]
lto = true
codegen-units = 1
